# hybrid-multiagent-llm

./: README.md  code.py  environment.yml  evaluation.ipynb  faiss_index.index  mindyourstockfv.ipynb  mys.py  mys_app.py  mys_appv2.py  mysv2.py  packages.txt  preprocessing.py  pyproject.toml  query_response_metadata.npy  questions  requirements.txt  streamlit_app.py  testing.ipynb  yf_fundamental_analysis_evalutaion.csv
crew_results/: crew_result.md
mindyourstock/: pyproject.toml
tools/: fundamental_analysis_tool.py  news_tool.py  sentiment_analysis_tool.py  yf_tech_analysis_tool.py
