[tool.poetry]
name = "mindyourstock"
version = "0.1.0"
description = ""
authors = ["Penosh22 <penosh.gorla22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = "0.75.1"
faiss-cpu = "^1.9.0"
numpy = "^1.25"
spacy = "^3.4.0"
torch = "^2.5.0"
transformers = "^4.46.0"
sentence-transformers = "^3.2.1"
langchain = "^0.3.4"
langchain-community = "^0.3.3"
langchain-openai = "^0.2.3"
nltk = "^3.9.1"
streamlit = "^1.39.0"
yfinance = "^0.2.46"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
plotly = "^5.24.1"
openai = "^1.52.2"
pandas = "^2.2.3"
joblib = "^1.4.2"
crewai-tools = "^0.13.2"
beautifulsoup4 = "^4.12.3"
langchain-groq = "0.2.0"
chromadb = "<0.5.0"
pysqlite3-binary = "0.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
